--- a/.github/workflows/openhands_review.yml
+++ b/.github/workflows/openhands_review.yml
@@ -40,119 +40,122 @@ jobs:
       - name: Install code quality tools
         run: |
           python -m pip install --upgrade pip
-          pip install openhands-ai pylint black mypy ruff
+          pip install black mypy ruff
 
       - name: Run code quality checks
         id: quality_checks
         continue-on-error: true
         run: |
-          # Run various code quality tools and store their output
           {
             echo "### Code Quality Analysis Results" > quality_report.md
-            echo "" >> quality_report.md
             
-            # Run Black for code formatting
+            # Black check
             echo "#### Black (Code Formatting)" >> quality_report.md
             echo '```' >> quality_report.md
-            if black --check --diff .; then
-              echo "✅ Code formatting is consistent with Black standards" >> quality_report.md
-              echo "BLACK_PASSED=true" >> $GITHUB_ENV
-            else
-              echo "❌ Code formatting issues found" >> quality_report.md
-              black --check --diff . >> quality_report.md 2>&1
-              echo "BLACK_PASSED=false" >> $GITHUB_ENV
-            fi
-            echo '```' >> quality_report.md
-            echo "" >> quality_report.md
+            black --check --diff . >> quality_report.md 2>&1 || true
+            [ $? -eq 0 ] && echo "BLACK_PASSED=true" >> $GITHUB_ENV || echo "BLACK_PASSED=false" >> $GITHUB_ENV
             
-            # Run Ruff for fast Python linting
-            echo "#### Ruff (Fast Python Linter)" >> quality_report.md
+            # Ruff check
+            echo "#### Ruff (Linting)" >> quality_report.md
             echo '```' >> quality_report.md
-            if ruff check .; then
-              echo "✅ No issues found by Ruff" >> quality_report.md
-              echo "RUFF_PASSED=true" >> $GITHUB_ENV
-            else
-              echo "❌ Ruff found code quality issues" >> quality_report.md
-              ruff check . >> quality_report.md 2>&1
-              echo "RUFF_PASSED=false" >> $GITHUB_ENV
-            fi
-            echo '```' >> quality_report.md
-            echo "" >> quality_report.md
+            ruff check . >> quality_report.md 2>&1 || true
+            [ $? -eq 0 ] && echo "RUFF_PASSED=true" >> $GITHUB_ENV || echo "RUFF_PASSED=false" >> $GITHUB_ENV
             
-            # Run MyPy for type checking
+            # MyPy check
             echo "#### MyPy (Type Checking)" >> quality_report.md
             echo '```' >> quality_report.md
-            if mypy . --ignore-missing-imports; then
-              echo "✅ Type checking passed" >> quality_report.md
-              echo "MYPY_PASSED=true" >> $GITHUB_ENV
-            else
-              echo "❌ Type checking issues found" >> quality_report.md
-              mypy . --ignore-missing-imports >> quality_report.md 2>&1
-              echo "MYPY_PASSED=false" >> $GITHUB_ENV
-            fi
-            echo '```' >> quality_report.md
-          } 
+            mypy . --ignore-missing-imports >> quality_report.md 2>&1 || true
+            [ $? -eq 0 ] && echo "MYPY_PASSED=true" >> $GITHUB_ENV || echo "MYPY_PASSED=false" >> $GITHUB_ENV
+          }
 
+      - name: Run OpenHands Review
+        id: openhands_review
+        if: env.BLACK_PASSED == 'true' && env.RUFF_PASSED == 'true' && env.MYPY_PASSED == 'true'
+        env:
+          WORKSPACE_BASE: ${{ github.workspace }}
+          LLM_MODEL: "anthropic/claude-3-5-sonnet-20241022"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Setup environment
+          mkdir -p ${GITHUB_WORKSPACE}/.openhands-state
+          chmod -R 777 ${GITHUB_WORKSPACE}/.openhands-state
 
-- name: Process review results
+          # Get PR details via GitHub API
+          PR_FILES=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files")
+
+          # Format task instruction
+          TASK_INSTRUCTION="Review PR #${{ github.event.pull_request.number }} in ${{ github.repository }} according to .openhands_instructions. Output EXACTLY 'GOOD' or 'BAD'. PR changes: $PR_FILES"
+
+          # Create a named pipe for input
+          PIPE_PATH=$(mktemp -u)
+          mkfifo "$PIPE_PATH"
+          
+          # Start background process to feed empty lines
+          while true; do echo ''; sleep 1; done > "$PIPE_PATH" &
+          FEED_PID=$!
+
+          # Run OpenHands with input from the pipe
+          docker run --rm \
+            --user root \
+            -e SANDBOX_RUNTIME_CONTAINER_IMAGE=docker.all-hands.dev/all-hands-ai/runtime:0.24-nikolaik \
+            -e SANDBOX_USER_ID=$(id -u) \
+            -e WORKSPACE_MOUNT_PATH=$WORKSPACE_BASE \
+            -e LLM_API_KEY=${{ secrets.LLM_API_KEY }} \
+            -e LLM_MODEL=$LLM_MODEL \
+            -e LOG_ALL_EVENTS=true \
+            -v $WORKSPACE_BASE:/opt/workspace_base \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v ${GITHUB_WORKSPACE}/.openhands-state:/.openhands-state \
+            --add-host host.docker.internal:host-gateway \
+            docker.all-hands.dev/all-hands-ai/openhands:0.24 \
+            python -m openhands.core.main \
+            -t "$TASK_INSTRUCTION" \
+            --eval-output-dir ./eval_output \
+            -i 50 \
+            -b 50 \
+            --eval-n-limit 50 < "$PIPE_PATH" > openhands_output.log 2>&1
+
+          # Clean up
+          kill $FEED_PID
+          rm "$PIPE_PATH"
+
+          # More robust result parsing
+          if grep -E "thought.*GOOD" openhands_output.log || grep -E "\[Agent Controller.*GOOD" openhands_output.log; then
+            echo "OPENHANDS_PASSED=true" >> $GITHUB_ENV
+          else
+            echo "OPENHANDS_PASSED=false" >> $GITHUB_ENV
+          fi
+
+      - name: Process review results
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          # Read the quality report
           QUALITY_REPORT=$(cat quality_report.md)
-          
-          # Check if all automated checks passed
-          CHECKS_PASSED="true"
+          OPENHANDS_LOG=$(cat openhands_output.log || echo "No OpenHands log available")
+
           if [ "$BLACK_PASSED" != "true" ] || [ "$RUFF_PASSED" != "true" ] || [ "$MYPY_PASSED" != "true" ]; then
-            CHECKS_PASSED="false"
-          fi
-          
-          # If automated checks failed, don't consider OpenHands result
-          if [ "$CHECKS_PASSED" = "false" ]; then
             gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **Code Quality Review Failed**
 
-            Automated quality checks did not pass. Please review the report below and make necessary changes.
-
-            $QUALITY_REPORT"
-            
-            gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met. See the detailed report in the PR comments."
-            exit 0
-          fi
-          
-          # If we get here, all automated checks passed, now check OpenHands result
-          # Get the last line of output and check if it's GOOD or BAD
-          OPENHANDS_RESULT=$(cat openhands_output.txt | tail -n1 | grep -E '^(GOOD|BAD)$' || echo "BAD")
-          echo "Final OpenHands result: $OPENHANDS_RESULT"
-          
-          if [ "$OPENHANDS_RESULT" = "GOOD" ]; then
-            gh pr comment "${{ github.event.pull_request.number }}" --body "✅ **Code Quality Review Passed**
-
-            All automated checks and OpenHands review passed. Auto-merging PR.
-
+            Automated checks failed. Fix these first:
             $QUALITY_REPORT
-
-            OpenHands Review Output:
-            \`\`\`
-            $(cat openhands_output.txt || echo "No output available")
+            OpenHands Log: \`\`\`
+            $OPENHANDS_LOG
             \`\`\`"
-            
-            gh pr review "${{ github.event.pull_request.number }}" --approve -b "All code quality standards met."
-            
-            # Enable auto-merge
-            gh pr merge "${{ github.event.pull_request.number }}" --auto --merge
-            gh pr merge "${{ github.event.pull_request.number }}" --merge
-          else
-            gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **Code Quality Review Failed**
-
-            While automated checks passed, OpenHands AI review found quality issues. Please review your code for potential improvements.
-
-            $QUALITY_REPORT
-
-            OpenHands Review Output:
-            \`\`\`
-            $(cat openhands_output.txt || echo "No output available")
-            \`\`\`"
-            
-            gh pr review "${{ github.event.pull_request.number }}" --request-changes -b "Code quality standards not met according to OpenHands AI review."
+            gh pr review "${{ github.event.pull_request.number }}" --request-changes
             exit 1
+          elif [ "$OPENHANDS_PASSED" = "true" ]; then
+            gh pr comment "${{ github.event.pull_request.number }}" --body "✅ **All Checks Passed**
+            $QUALITY_REPORT"
+            gh pr review "${{ github.event.pull_request.number }}" --approve
+            gh pr merge "${{ github.event.pull_request.number }}" --auto --merge  # Fixed line
+          else
+            gh pr comment "${{ github.event.pull_request.number }}" --body "❌ **OpenHands Review Failed**
+            
+            $QUALITY_REPORT
+            OpenHands Findings: \`\`\`
+            $OPENHANDS_LOG
+            \`\`\`"
+            gh pr review "${{ github.event.pull_request.number }}" --request-changes
           fi
