--- a/.github/workflows/openhands-resolver.yml
+++ b/.github/workflows/openhands-resolver.yml
@@ -172,16 +172,20 @@ jobs:
           echo "TARGET_BRANCH=${{ inputs.target_branch }}" >> $GITHUB_ENV
       - name: Comment on issue with start message
         uses: actions/github-script@v7
+        env:
+          ISSUE_NUMBER: ${{ env.ISSUE_NUMBER }}
+          ISSUE_TYPE: ${{ env.ISSUE_TYPE }}
         with:
           github-token: ${{ secrets.PAT_TOKEN || github.token }}
           script: |
+            const issueNumber = parseInt(process.env.ISSUE_NUMBER);
             const issueType = process.env.ISSUE_TYPE;
             github.rest.issues.createComment({
-              issue_number: ${{ env.ISSUE_NUMBER }},
+              issue_number: issueNumber,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `[OpenHands](https://github.com/All-Hands-AI/OpenHands) started fixing the ${issueType}! You can monitor the progress [here](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}).`
-            });
+            })
       - name: Install OpenHands
         id: install_openhands
         uses: actions/github-script@v7
@@ -272,16 +276,17 @@ jobs:
               grep "branch created" branch_result.txt | sed 's/.*\///g; s/.expand=1//g' > branch_name.txt
           fi
       # Step leaves comment for when agent is invoked on PR
-      - name: Analyze Push Logs (Updated PR or No Changes) # Skip comment if PR update was successful OR leave comment if the agent made no code changes
+      - name: Analyze Push Logs (Updated PR or No Changes)
         uses: actions/github-script@v7
         if: always()
         env:
-          AGENT_RESPONDED: ${{ env.AGENT_RESPONDED || 'false' }}
+          AGENT_RESPONDED: "false"
+          ISSUE_NUMBER: ${{ env.ISSUE_NUMBER }}
         with:
           github-token: ${{ secrets.PAT_TOKEN || github.token }}
           script: |
             const fs = require('fs');
-            const issueNumber = ${{ env.ISSUE_NUMBER }};
+            const issueNumber = parseInt(process.env.ISSUE_NUMBER);
             let logContent = '';
             try {
               logContent = fs.readFileSync('/tmp/pr_result.txt', 'utf8').trim();
@@ -299,22 +304,24 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: `The workflow to fix this issue encountered an error. Openhands failed to create any code changes.`
-              });
+              })
               process.env.AGENT_RESPONDED = 'true';
             }
       # Step leaves comment for when agent is invoked on issue
-      - name: Comment on issue # Comment link to either PR or branch created by agent
+      - name: Comment on issue
         uses: actions/github-script@v7
-        if: always() # Comment on issue even if the previous steps fail
+        if: always()
         env:
           AGENT_RESPONDED: ${{ env.AGENT_RESPONDED || 'false' }}
+          ISSUE_NUMBER: ${{ env.ISSUE_NUMBER }}
+          RESOLUTION_SUCCESS: ${{ steps.check_result.outputs.RESOLUTION_SUCCESS }}
         with:
           github-token: ${{ secrets.PAT_TOKEN || github.token }}
           script: |
             const fs = require('fs');
             const path = require('path');
-            const issueNumber = ${{ env.ISSUE_NUMBER }};
-            const success = ${{ steps.check_result.outputs.RESOLUTION_SUCCESS }};
+            const issueNumber = parseInt(process.env.ISSUE_NUMBER);
+            const success = process.env.RESOLUTION_SUCCESS === 'true';
             let prNumber = '';
             let branchName = '';
             let resultExplanation = '';
@@ -351,7 +358,7 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: `A potential fix has been generated and a draft PR #${prNumber} has been created. Please review the changes.`
-              });
+              })
               process.env.AGENT_RESPONDED = 'true';
             } else if (!success && branchName) {
               let commentBody = `An attempt was made to automatically fix this issue, but it was unsuccessful. A branch named '${branchName}' has been created with the attempted changes. You can view the branch [here](https://github.com/${context.repo.owner}/${context.repo.repo}/tree/${branchName}). Manual intervention may be required.`;
@@ -363,20 +370,23 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: commentBody
-              });
+              })
               process.env.AGENT_RESPONDED = 'true';
             }
       # Leave error comment when both PR/Issue comment handling fail
       - name: Fallback Error Comment
         uses: actions/github-script@v7
-        if: ${{ env.AGENT_RESPONDED == 'false' }} # Only run if no conditions were met in previous steps
+        env:
+          AGENT_RESPONDED: ${{ env.AGENT_RESPONDED || 'false' }}
+          ISSUE_NUMBER: ${{ env.ISSUE_NUMBER }}
+        if: ${{ env.AGENT_RESPONDED == 'false' }}
         with:
-          github-token: ${{ secrets.PAT_TOKEN || github.token }}
+          github-token: ${{secrets.PAT_TOKEN}}
           script: |
-            const issueNumber = ${{ env.ISSUE_NUMBER }};
+            const issueNumber = parseInt(process.env.ISSUE_NUMBER);
             github.rest.issues.createComment({
               issue_number: issueNumber,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `The workflow to fix this issue encountered an error. Please check the [workflow logs](https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}) for more information.`
-            });
+            })
